--- a/pixi.toml
+++ b/pixi.toml
@@ -6,12 +6,38 @@ platforms = ["linux-64"]
 version = "0.1.0"
 
 [tasks]
+submodule = "git submodule update --recursive --remote --init"
+simulation = { cmd = "maturin develop", depends-on = ["submodule"], cwd = "simulation" }
+test_llm = { cmd = "python test_llm.py"}
+gen_emb ={ cmd = "sh scripts/generate_embs.sh"}
+base_line = {cmd = "sh scripts/base_line.sh"}
+cdit ={ cmd = "sh scripts/cdit.sh"}
+trim = {cmd = "python src/hyper_simulation/question_answer/get_trim.py"}
+analysis = {cmd = "python src/hyper_simulation/question_answer/retrival/analysis.py"}
+time_cost = {cmd = "python src/hyper_simulation/llm/time_cost.py"}
+tool = {cmd = "python test_tool.py"}
+show = { cmd = "python src/hyper_simulation/question_answer/utils/show_task.py"}
 
 [dependencies]
-python = ">=3.13.2,<3.14"
+python = "3.11.*"
+pip = ">=25.0.1,<26"
+maturin = ">=1.8.3,<2"
+# faiss-gpu = { path = "lib/faiss-gpu-1.10.0-py3.11_h4818125_0_cuda12.1.1.conda"}
+faiss-cpu = { version = ">=1.9.0"}
 
 [pypi-dependencies]
+hyper-simulation = { path = ".", editable = true }
+contrievers = { path = "src/contrievers" , editable = true }
 tqdm = ">=4.67.1, <5"
 torch = { version = ">=2.5.1", index = "https://download.pytorch.org/whl/cu121" }
+beir = ">= 2.1.0"
+numpy = ">=1.26.4,<2"
+matplotlib = ">=3.10.1, <4"
+jsonlines = ">=4.0.0, <5"
 langchain = ">= 0.3.20"
 langchain_ollama = ">= 0.2.3"
+langchain-openai = ">=0.3.11, <0.4"
+langchain-community = ">=0.3.19, <0.4"
+colorama = ">=0.4.6, <0.5"
+keyboard = ">=0.13.5, <0.14"
+prompt-toolkit = ">=3.0.51, <4"
