--- a/pixi.toml
+++ b/pixi.toml
@@ -6,8 +6,9 @@ platforms = ["linux-64"]
 version = "0.1.0"
 
 [tasks]
-submodule = "git submodule update --recursive --remote --init"
-simulation = { cmd = "maturin develop", depends-on = ["submodule"], cwd = "simulation" }
+# submodule = "git submodule update --recursive --remote --init"
+# simulation = { cmd = "maturin develop", depends-on = ["submodule"], cwd = "simulation" }
+# install = {depends-on = ["simulation"]}
 test_llm = { cmd = "python test_llm.py"}
 gen_emb ={ cmd = "sh scripts/generate_embs.sh"}
 base_line = {cmd = "sh scripts/base_line.sh"}
@@ -41,3 +42,4 @@ langchain-community = ">=0.3.19, <0.4"
 colorama = ">=0.4.6, <0.5"
 keyboard = ">=0.13.5, <0.14"
 prompt-toolkit = ">=3.0.51, <4"
+simulation-alg = ">=0.1.0, <0.2"
