add the hypergraph para

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,6 @@
     "python.analysis.extraPaths": [
         ".pixi/envs/default/lib/python3.11/site-packages"
     ],
+    "python-envs.defaultEnvManager": "ms-python.python:system",
+    "python-envs.pythonProjects": [],
 }
