[FIX|WHT] improve the construction of hypergraph

--- a/pixi.toml
+++ b/pixi.toml
@@ -73,11 +73,12 @@ coreferee = "==1.4.1"
 pywsd = "==1.2.5"
 transformers = "==4.25.1"
 spacy-transformers = "==1.1.9"
+jsonlines = ">=4.0.0, <5"
 
 [feature.hypergraph.tasks]
 dependency = { cmd = "python tests/test_dependency.py"}
 build = { cmd = "python src/hyper_simulation/question_answer/rag_no_retrival.py --method hyper_simulation --build False" }
-# pixi run -e hypergraph build --dataset hotpotqa --output_dir data/hypergraph
+# pixi run -e hypergraph build --data_path /home/vincent/.dataset/HotpotQA/sample20distractor --task hotpotqa
 
 [feature.simulation.dependencies]
 python = "3.10.*"
@@ -98,7 +99,8 @@ jsonlines = ">=4.0.0, <5"
 pre = { cmd = "python tests/test_hypergraph.py"}
 test_contradoc = { cmd = "python tests/test_contradoc.py" }
 rag_no_retrival = { cmd = "python src/hyper_simulation/question_answer/rag_no_retrival.py" }
-
+hyper_simulation = { cmd = "python src/hyper_simulation/question_answer/rag_no_retrival.py --method hyper_simulation" }
+# pixi run -e simulation hyper_simulation --data_path /home/vincent/.dataset/HotpotQA/sample20distractor
 [environments]
 hypergraph = { features = ["hypergraph"] }
 simulation = { features = ["simulation"] }
