--- a/pixi.toml
+++ b/pixi.toml
@@ -25,6 +25,7 @@ rag = { cmd = [
 [dependencies]
 # python = "3.11.*"
 pip = ">=25.0.1,<26"
+libstdcxx-ng = ">=15.2.0,<16"
 # maturin = ">=1.8.3,<2"
 # faiss-gpu = { path = "lib/faiss-gpu-1.10.0-py3.11_h4818125_0_cuda12.1.1.conda"}
 # faiss-cpu = { version = ">=1.9.0"}
@@ -100,6 +101,7 @@ pre = { cmd = "python tests/test_hypergraph.py"}
 test_contradoc = { cmd = "python tests/test_contradoc.py" }
 rag_no_retrival = { cmd = "python src/hyper_simulation/question_answer/rag_no_retrival.py" }
 hyper_simulation = { cmd = "python src/hyper_simulation/question_answer/rag_no_retrival.py --method hyper_simulation" }
+# LD_LIBRARY_PATH="/home/vincent/hyper-simulation/.pixi/envs/simulation/lib" \
 # pixi run -e simulation hyper_simulation --data_path /home/vincent/.dataset/HotpotQA/sample20distractor
 [environments]
 hypergraph = { features = ["hypergraph"] }
